# paperBadge

./: .gitignore  CLAUDE.md  CMakeLists.txt  COMMIT_LOG.md  PROJECT_STATE_FOR_CHATGPT.md  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
NOTES/: HARDWARE_JAPANESE_FINAL_POLISH_PLAN.md  HARDWARE_JAPANESE_FINAL_POLISH_SUMMARY.md  HARDWARE_REFACTOR_PLAN.md  HARDWARE_REFACTOR_SUMMARY.md  JP_FONT_ASSET_NOTES.md  RESPONSIVENESS_READER_JP_FONTS_PLAN.md  STUDY_UI_POWER_READER_OVERHAUL_PLAN.md  STUDY_UI_POWER_READER_OVERHAUL_SUMMARY.md  TOUCH_READER_FEEDBACK_BUGFIX_PLAN.md
components/JPEGDEC/: CMakeLists.txt
components/PNGdec/: CMakeLists.txt
components/PNGdec/src/: PNGdec.h  inffast.c
components/miniz/: CMakeLists.txt  miniz.c
docs/: ASSET_NOTES.md  CONTENT_SCHEMA.md  DEVICE_LEARNINGS.md  FONT_LAB.md  FONT_MANGA_REDTEAM_REVIEW.md  JAPANESE_DATA_SCHEMA.md  MANGA_OCR_SIDECARS.md  MANGA_READER_LIMITS.md  NEXT_CODEX_SPRINT_PROMPT.md  NEXT_WORK_QUEUE.md  PAPERCOACH_PRD.md  POWER_NOTES.md  PRD_PaperBadge_v0.6.md  QA_GUIDE.md  READER_AND_POWER_TEST_PLAN.md  RECOVERY_QA.md  embedded_deck_dump.md
src/: CMakeLists.txt  embedded_assets.h  embedded_badge.h  embedded_interview_deck.h  embedded_papercoach_deck.h  loading_png_data.c  main.cpp  paperbadge_main.cpp
src/apps/: ReaderApp.cpp  ReaderApp.h
src/comic/: cbz_book.cpp  cbz_book.hpp  image_display.cpp  image_display.hpp  page_loader.cpp  page_loader.hpp  touch_zones.hpp
src/font/: builtin_ui_font.cpp  builtin_ui_font.h  font_lab_assets.cpp  font_lab_assets.h  text_render.cpp  text_render.hpp  utf8.hpp  xteink_font.cpp  xteink_font.hpp
src/hal/: battery.cpp  battery.hpp  display.cpp  display.hpp  epdiy_paper_s3_board.c  imu.cpp  imu.hpp  sd.cpp  sd.hpp  touch.cpp  touch.hpp
src/hw/: BatteryManager.cpp  BatteryManager.h  Diagnostics.cpp  Diagnostics.h  DisplayManager.cpp  DisplayManager.h  PowerManager.cpp  PowerManager.h  RTCManager.cpp  RTCManager.h  SDManager.cpp  SDManager.h  SleepManager.cpp  SleepManager.h  TouchManager.cpp  TouchManager.h  WakeManager.cpp  WakeManager.h  WifiManager.cpp  WifiManager.h
src/reader/: BookLibrary.cpp  BookLibrary.h  EpubReader.cpp  EpubReader.h  PageCache.cpp  PageCache.h  ReaderState.cpp  ReaderState.h  TxtReader.cpp  TxtReader.h
src/system/: file_picker.cpp  file_picker.hpp  menu.cpp  menu.hpp  screenshot.cpp  screenshot.hpp  session.cpp  session.hpp  settings.cpp  settings.hpp
tools/: build_embedded_assets.py  build_embedded_papercoach.py  convert_prep_sheet.py  font_candidates.py  gen_builtin_ui_font.py  gen_icons.py  manga_preprocess.py  prepare_assets.py  prepare_jp_fonts.sh  subset_jp_font.py
(+15 files in other folders)
